add commend show one blog :)
